--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -98,6 +98,7 @@
     "react-is": "^18.3.1",
     "react-json-view-lite": "^1.4.0",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.26.2",
     "react-screen-capture": "^1.1.1",
     "react-select": "^5.8.0",
     "redux": "^4.2.1",
