--- a/.github/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/deploy-wordpress-plugin-preview-lightsail.yml
@@ -227,7 +227,7 @@ jobs:
             WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
 
             # Create cache folder if it doesn't exist and grant 755 permissions
-            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "if [ ! -d /bitnami/wordpress/wp-content/cache ]; then mkdir -p /bitnami/wordpress/wp-content/cache; fi && chmod -R 755 /bitnami/wordpress/wp-content/cache"
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "if [ ! -d /bitnami/wordpress/wp-content/cache ]; then mkdir -p /bitnami/wordpress/wp-content/cache; fi && chmod -R 755 /bitnami/wordpress/wp-content/cache && chown daemon:daemon /bitnami/wordpress/wp-content/cache"
           EOF
 
       - name: Update domain in wp-config.php
