--- a/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
@@ -283,6 +283,7 @@ jobs:
               if [ -d ${PLUGIN_PATH} ]; then
                 echo 'Plugin directory exists. Running git pull...'
                 cd ${PLUGIN_PATH}
+                git clean -f
                 git reset --hard HEAD
                 git pull origin ${{ github.head_ref }}
               else
