--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -109,6 +109,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "underscore": "^1.13.7",
+    "uuid": "^10.0.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
