--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -66,9 +66,11 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reactour/tour": "^3.7.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.19.3",
     "@types/react-redux": "^7.1.33",
     "@wordpress/dom-ready": "^4.4.0",
+    "ai": "^3.4.30",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -96,6 +98,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-is": "^18.3.1",
     "react-json-view-lite": "^1.4.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.1",
     "react-screen-capture": "^1.1.1",
     "react-select": "^5.8.0",
