--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -84,6 +84,7 @@
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.417.0",
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^8.0.0",
