--- a/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
@@ -208,19 +208,6 @@ jobs:
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php"
           EOF
 
-      - name: Create cache folder and grant 755 permissions
-        if: ${{ github.event.action == 'opened' }}
-        run: |
-          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@${{ secrets.SSH_HOST_LINODE }} << EOF
-            set -x
-            INSTANCE_ID=${{ github.event.number }}
-            DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
-            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
-
-            # Create cache folder if it doesn't exist and grant 755 permissions
-            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "if [ ! -d /bitnami/wordpress/wp-content/cache ]; then mkdir -p /bitnami/wordpress/wp-content/cache; fi && chmod -R 775 /bitnami/wordpress/wp-content/cache && chown daemon:daemon /bitnami/wordpress/wp-content/cache"
-          EOF
-
       - name: Update domain in wp-config.php
         if: ${{ github.event.action == 'opened' }}
         run: |
@@ -358,6 +345,19 @@ jobs:
 
             # Remove the 'upload_plugins' capability from the 'administrator' role
             sudo docker exec -u root -i ${WP_CONTAINER} sh -c "echo \"define('DISALLOW_FILE_MODS', true);\" >> /bitnami/wordpress/wp-config.php"
+          EOF
+
+      - name: Create cache folder and grant 755 permissions
+        if: ${{ github.event.action == 'opened' }}
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@${{ secrets.SSH_HOST_LINODE }} << EOF
+            set -x
+            INSTANCE_ID=${{ github.event.number }}
+            DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+
+            # Create cache folder if it doesn't exist and grant 755 permissions
+            sudo docker exec -u root ${WP_CONTAINER} chown -R daemon:daemon /bitnami/wordpress
           EOF
 
       - name: Clean up old Docker containers and volumes
