--- a/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
@@ -347,7 +347,7 @@ jobs:
             sudo docker exec -u root -i ${WP_CONTAINER} sh -c "echo \"define('DISALLOW_FILE_MODS', true);\" >> /bitnami/wordpress/wp-config.php"
           EOF
 
-      - name: Create cache folder and grant 755 permissions
+      - name: Grant permission to daemon user
         if: ${{ github.event.action == 'opened' }}
         run: |
           ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@${{ secrets.SSH_HOST_LINODE }} << EOF
@@ -356,7 +356,7 @@ jobs:
             DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
             WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
 
-            # Create cache folder if it doesn't exist and grant 755 permissions
+            # Grant permission to daemon user
             sudo docker exec -u root \$WP_CONTAINER sh -c 'chown -R daemon:daemon /bitnami/wordpress'
           EOF
 
