--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -41,6 +41,7 @@
     "publish:beta": "npm publish --tag beta"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.5",
     "@bugsnag/browser-performance": "^2.7.1",
     "@bugsnag/js": "^7.25.0",
     "@bugsnag/plugin-react": "^7.25.0",
@@ -70,6 +71,7 @@
     "@tanstack/react-table": "^8.19.3",
     "@types/react-redux": "^7.1.33",
     "@wordpress/dom-ready": "^4.4.0",
+    "ai": "^4.0.16",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -99,6 +101,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-is": "^18.3.1",
     "react-json-view-lite": "^1.4.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.26.2",
     "react-screen-capture": "^1.1.1",
