--- a/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
@@ -29,7 +29,8 @@ jobs:
         uses: tibdex/github-app-token@v1
         with:
           app_id: '967897'
-          private_key: '${{ secrets.GH_APP_PRIVATE_KEY }}'
+          installation_id: '53709773'
+          private_key: ${{ secrets.GH_APP_PRIVATE_KEY }}
 
       - name: Comment on PR if there are merge conflicts
         if: steps.merge_check.outputs.conflict == 'true'
