--- a/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-linode.yml
@@ -281,21 +281,17 @@ jobs:
 
             sudo docker exec -u root -i ${WP_CONTAINER} sh -c "
               if [ -d ${PLUGIN_PATH} ]; then
-                echo 'Plugin directory exists. Removing and cloning fresh...'
-                rm -rf ${PLUGIN_PATH}
-              fi
-              
-              cd ${PLUGIN_DIR}
-              echo 'Cloning plugin repository...'
-              git config --global http.postBuffer 524288000
-              git clone --depth 1 -b ${{ github.head_ref }} --single-branch https://github.com/shakee93/autoptimize-unusedcss.git ${PLUGIN_PATH} || {
-                echo 'Failed to clone branch directly, trying to clone main and cherry-pick changes...'
-                git clone --depth 1 https://github.com/shakee93/autoptimize-unusedcss.git ${PLUGIN_PATH}
+                echo 'Plugin directory exists. Running git pull...'
                 cd ${PLUGIN_PATH}
-                git fetch origin ${{ github.head_ref }}
-                git checkout -b ${{ github.head_ref }}
-                git reset --hard origin/${{ github.head_ref }}
-              }
+                git clean -f
+                git reset --hard HEAD
+                git pull origin ${{ github.head_ref }}
+              else
+                cd ${PLUGIN_DIR}
+                echo 'Cloning plugin repository...'
+                git config --global http.postBuffer 524288000
+                git clone --depth 1 -b ${{ github.head_ref }} --single-branch https://github.com/shakee93/autoptimize-unusedcss.git ${PLUGIN_PATH}
+              fi
             "
             if [ $? -eq 0 ]; then
               echo "Plugin repository updated successfully in ${WP_CONTAINER}"
