--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -48,9 +48,11 @@
     "@fontsource-variable/inter": "^5.0.19",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-focus-scope": "^1.1.0",
@@ -68,6 +70,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reactour/tour": "^3.7.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.19.3",
     "@types/react-redux": "^7.1.33",
     "@wordpress/dom-ready": "^4.4.0",
