--- a/.github/workflows/rapidload-ai-plugin-deploy.yml
+++ b/.github/workflows/rapidload-ai-plugin-deploy.yml
@@ -16,5 +16,6 @@ jobs:
 
       - name: Set version
         id: version
-        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        run: cat $GITHUB_ENV
+        run: | 
+            echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+            cat $GITHUB_ENV
