--- a/.github/workflows/rapidload-ai-plugin-deploy.yml
+++ b/.github/workflows/rapidload-ai-plugin-deploy.yml
@@ -19,3 +19,10 @@ jobs:
         run: | 
             echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
             cat $GITHUB_ENV
+
+      - name: Zip Plugin Files
+        run: |
+          PLUGIN_NAME="unusedcss"
+          zip -r "${PLUGIN_NAME}-${{ env.VERSION }}.zip" . -x "*.git*" -x "*.github*"
+      
+      
