--- a/.github/workflows/rapidload-ai-plugin-deploy.yml
+++ b/.github/workflows/rapidload-ai-plugin-deploy.yml
@@ -58,7 +58,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "update.json"
+          SOURCE_DIR: "./update.json"
           DEST_DIR: "plugins/unusedcss/"
       
 
